--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,7 @@ typings/
 
 # dotenv environment variables file
 .env
+.env.local
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
@@ -127,4 +128,4 @@ sketch
 # End of https://www.toptal.com/developers/gitignore/api/react,node
 
 #custom
-.idea/
+
